--- a/css/styles.css
+++ b/css/styles.css
@@ -551,3 +551,88 @@ overflow: hidden;
     background-color: #31d0aa;
 }
 
+
+
+/* =============== modal window ===================== */
+
+
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+.modal {
+    position: absolute;
+    width: 408px;
+    min-height: 584px;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    padding: 24px 31px 24px 17px;
+}
+
+.close-btn {
+    display: block;
+    margin-left: auto;
+    border-radius: 4px;
+    width: 24px;
+    height: 24px;
+}
+
+.text-modal {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+        margin-top: 24px;
+        margin-bottom: 16px;
+}
+
+.form-modal {
+
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #4d5ae5;
+        border-radius: 4px;
+        margin-bottom: 8px;
+}
+
+.label-modal {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+}
+
+.btn-modal-submit {
+border-radius: 4px;
+padding: 16px 32px;
+width: 169px;
+height: 56px;
+margin-top: 16px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background-color: #4d5ae5;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+}
