--- a/css/styles.css
+++ b/css/styles.css
@@ -551,7 +551,53 @@ overflow: hidden;
     background-color: #31d0aa;
 }
 
+.footer-bloc-input {
+    margin-left: 80px;
+}
 
+.input-footer {
+border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    color: #FFFFFF;
+    margin-right: 24px;
+}
+
+.input-footer::placeholder {
+    font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: #fff;
+        padding: 8px 16px;
+}
+
+.footer-input-element {
+    display: flex;
+}
+.footer-btn {
+    display: block;
+    border-radius: 4px;
+        padding: 8px 24px;
+        width: 165px;
+        height: 40px;
+        background-color: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+}
+
+.icon-btn-footer {
+    fill: #fff;
+}
 
 /* =============== modal window ===================== */
 
@@ -563,9 +609,15 @@ overflow: hidden;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal {
@@ -584,10 +636,31 @@ overflow: hidden;
 .close-btn {
     display: block;
     margin-left: auto;
-    border-radius: 4px;
     width: 24px;
     height: 24px;
+    border-radius: 100%;
+    border-color: rgba(0, 0, 0, 0.1);
+    background-color: #e7e9fc;
+    position: relative;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.close-icon {
+fill: #2e2f42;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover {
+    background-color: #404bbf;
+}
+.close-btn:hover .close-icon {
+fill: #fff;
+}
+
 
 .text-modal {
         font-weight: 500;
@@ -600,16 +673,40 @@ overflow: hidden;
         margin-bottom: 16px;
 }
 
-.form-modal {
-
+.modal-fill {
+    margin-bottom: 8px;
 }
 
 .modal-input {
     width: 100%;
     height: 40px;
-    border: 1px solid #4d5ae5;
+    border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
-        margin-bottom: 8px;
+        margin-top: 4px;
+        padding-left: 38px;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    border-color: #4d5ae5;
+}
+
+.modal-input:focus + .modal-icons{
+    fill: #4d5ae5;
+}
+
+.modal-input-wrap {
+    position: relative;
+}
+.modal-icons {
+position: absolute;
+fill:#2e2f42;
+left: 16px;
+top: 8px;
+top: 50%;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .label-modal {
@@ -617,17 +714,65 @@ overflow: hidden;
     line-height: 1.16;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    margin-bottom: 4px;
+}
+
+.textarea-modal {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 100%;
+        height: 120px;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        resize: none;
+        outline: transparent;
+        margin-top: 4px;
+        padding-left: 16px;
+        padding-top: 8px;
+}
+
+.textarea-modal:focus {
+    border-color: #4d5ae5;
+}
+
+.textarea-modal::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.check-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.check-text span {
+width: 16px;
+height: 16px;
+border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.check-link {
+    line-height: 1.33;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4d5ae5;
 }
 
 .btn-modal-submit {
+    border: none;
 border-radius: 4px;
 padding: 16px 32px;
 width: 169px;
 height: 56px;
-margin-top: 16px;
+margin: 24px 96px;
+background-color: #4d5ae5;;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background-color: #4d5ae5;
+cursor: pointer;
 font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
