--- a/css/styles.css
+++ b/css/styles.css
@@ -580,9 +580,11 @@ border: 1px solid #fff;
     display: flex;
 }
 .footer-btn {
-    display: block;
-    border-radius: 4px;
-        padding: 8px 24px;
+    display: flex;
+    padding: 8px 24px;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
         width: 165px;
         height: 40px;
         background-color: #4d5ae5;
@@ -591,8 +593,13 @@ border: 1px solid #fff;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
-        text-align: center;
         color: #fff;
+        cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover {
+    background-color: #404bbf;
 }
 
 .icon-btn-footer {
@@ -780,4 +787,9 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 text-align: center;
 color: #fff;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-modal-submit:hover {
+    background-color: #404bbf;
 }
