--- a/css/styles.css
+++ b/css/styles.css
@@ -748,20 +748,47 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: rgba(46, 47, 66, 0.4);
 }
 
+/* =========== checkboks ================= */
+
 .check-text {
+    display: flex;
+    align-items: center;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    margin-top: 16px;
+    margin-bottom: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check-text span {
+.check-text-icon {
+    position: relative;
 width: 16px;
 height: 16px;
 border-radius: 2px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
+border: 1px solid rgba(46, 47, 66, 0.4);
+margin-right: 8px;
+display: flex;
+justify-content: center;
+align-items: center;
+fill: transparent;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.check-text-icon:active {
+background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+}
+
+.modal-check:checked + .check-text span {
+background-color: #404bbf;
+border: none;
+fill: #f4f4fd;
+}
+
 
 .check-link {
     line-height: 1.33;
@@ -770,13 +797,16 @@ border-radius: 2px;
         color: #4d5ae5;
 }
 
+
+/* ==============  button modal ============= */
 .btn-modal-submit {
     border: none;
+    display: block;
 border-radius: 4px;
 padding: 16px 32px;
 width: 169px;
 height: 56px;
-margin: 24px 96px;
+margin: auto;
 background-color: #4d5ae5;;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 cursor: pointer;
@@ -790,6 +820,7 @@ color: #fff;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-modal-submit:hover {
+.btn-modal-submit:hover,
+.btn-modal-submit:focus {
     background-color: #404bbf;
 }
