--- a/css/styles.css
+++ b/css/styles.css
@@ -556,45 +556,48 @@ overflow: hidden;
 }
 
 .input-footer {
-border: 1px solid #fff;
+border: 1px solid #ffffff;
     border-radius: 4px;
     width: 264px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
     color: #FFFFFF;
     margin-right: 24px;
+    padding-left: 16px;
 }
 
 .input-footer::placeholder {
-    font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 2;
-        letter-spacing: 0.04em;
-        color: #fff;
-        padding: 8px 16px;
+        color: #ffffff;
+
 }
 
 .footer-input-element {
     display: flex;
+    gap: 24px;
 }
+
 .footer-btn {
     display: flex;
     padding: 8px 24px;
-        justify-content: center;
-        align-items: center;
-        gap: 16px;
-        width: 165px;
-        height: 40px;
-        background-color: #4d5ae5;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    min-width: 165px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
     font-family: "Roboto", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        color: #fff;
-        cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -604,9 +607,10 @@ border: 1px solid #fff;
 
 .icon-btn-footer {
     fill: #fff;
+    margin-left: 16px;
 }
 
-/* =============== modal window ===================== */
+/* =========== modal window ===================== */
 
 
 
