--- a/css/styles.css
+++ b/css/styles.css
@@ -704,7 +704,7 @@ fill: #ffffff;
 }
 
 .modal-fill {
-    margin-bottom: 16px;
+margin-bottom: 8px;
 }
 
 .modal-input {
@@ -798,13 +798,13 @@ margin-bottom: 24px;
 }
 
 .check-text-icon {
+    display: inline-flex;
     position: relative;
 width: 16px;
 height: 16px;
 border-radius: 2px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 margin-right: 8px;
-display: flex;
 justify-content: center;
 align-items: center;
 fill: transparent;
