--- a/css/styles.css
+++ b/css/styles.css
@@ -618,8 +618,8 @@ border: 1px solid #ffffff;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     height: 100%;
+    width: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     opacity: 0;
     visibility: hidden;
@@ -704,7 +704,7 @@ fill: #ffffff;
 }
 
 .modal-fill {
-margin-bottom: 8px;
+margin-bottom: 16px
 }
 
 .modal-input {
@@ -798,8 +798,8 @@ margin-bottom: 24px;
 }
 
 .check-text-icon {
-    display: inline-flex;
-    position: relative;
+position: relative;
+display: inline-flex;
 width: 16px;
 height: 16px;
 border-radius: 2px;
