--- a/css/styles.css
+++ b/css/styles.css
@@ -785,7 +785,7 @@ margin-bottom: 24px;
 }
 
 .check-text {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     font-weight: 400;
     font-size: 12px;
