--- a/css/styles.css
+++ b/css/styles.css
@@ -719,6 +719,10 @@ margin-bottom: 8px;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-fill-four {
+margin-bottom: 16px;
+}
+
 .modal-input:focus {
     border-color: #4d5ae5;
 }
