--- a/css/styles.css
+++ b/css/styles.css
@@ -618,6 +618,8 @@ border: 1px solid #ffffff;
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     opacity: 0;
     visibility: hidden;
