--- a/css/styles.css
+++ b/css/styles.css
@@ -616,6 +616,10 @@ border: 1px solid #ffffff;
 
 .backdrop {
     position: fixed;
+    display: flex;
+    z-index: 999;
+    justify-content: center;
+    align-items: center;
     top: 0;
     left: 0;
     width: 100%;
