--- a/css/styles.css
+++ b/css/styles.css
@@ -623,6 +623,7 @@ border: 1px solid #ffffff;
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     opacity: 0;
