--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
-    max-width: 1440px;
-    margin: 0 auto;
+    /* max-width: 1440px;
+    margin: 0 auto; */
 }
 
 .container {
