--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
-    /* max-width: 1440px;
-    margin: 0 auto; */
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .container {
@@ -159,6 +159,7 @@ text-decoration: underline;
         background-size: cover;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         max-width: 1440px;
+        margin: 0 auto;
     }
 
 
